# school_erp

./: .gitignore  .pre-commit-config.yaml  school_erp_plan.md
backend/: .env.docker  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_students_table.py  0002_create_auth_teachers_courses_enrollments.py  0003_create_idempotency_keys.py  0004_create_outbox_and_attendance.py  0005_create_grades_and_indexes.py
backend/app/: main.py
backend/app/modules/attendance/api/: dependencies.py  router.py  schemas.py
backend/app/modules/attendance/application/: dto.py  exceptions.py  ports.py  service.py
backend/app/modules/attendance/domain/: attendance.py
backend/app/modules/attendance/infrastructure/: orm.py  repository.py
backend/app/modules/auth/: current_user.py
backend/app/modules/auth/api/: dependencies.py  router.py  schemas.py
backend/app/modules/auth/application/: dto.py  exceptions.py  ports.py  service.py
backend/app/modules/auth/domain/: user.py
backend/app/modules/auth/infrastructure/: orm.py  password.py  repository.py  tokens.py
backend/app/modules/courses/api/: dependencies.py  router.py  schemas.py
backend/app/modules/courses/application/: dto.py  ports.py  service.py
backend/app/modules/courses/domain/: course.py
backend/app/modules/courses/infrastructure/: orm.py  repository.py
backend/app/modules/enrollment/api/: dependencies.py  router.py  schemas.py
backend/app/modules/enrollment/application/: dto.py  ports.py  (+2 more)
backend/app/shared/cache/: cache_aside.py  client.py  ports.py  redis_cache.py
backend/app/shared/config/: settings.py
backend/app/shared/database/: base.py  session.py  unit_of_work.py
backend/app/shared/idempotency/: orm.py  ports.py  repository.py
backend/app/shared/messaging/: ports.py  sns_publisher.py
backend/app/shared/middleware/: logging.py
backend/app/shared/observability/: metrics.py  middleware.py  setup.py
backend/app/shared/outbox/: events.py  orm.py  ports.py  relay.py  repository.py
backend/scripts/: get_init_function.py
backend/tests/unit/: attendance_fakes.py  auth_fakes.py  cache_fakes.py  enrollment_fakes.py  fakes.py  idempotency_fakes.py  messaging_fakes.py  outbox_fakes.py  teacher_fakes.py  test_attendance_service.py  test_auth_service.py  test_cache_aside.py  test_course_domain.py  test_enrollment_service.py  test_idempotency_store.py  test_student_domain.py  test_student_service.py  test_student_service_caching.py  test_teacher_service.py
services/notification/: .env.docker  Dockerfile  pyproject.toml
services/notification/src/notification/: config.py  consumer.py  email.py  handler.py  lambda_handler.py  main.py  messages.py  tracing.py
services/notification/tests/: test_handler.py  test_lambda_handler.py
services/reporting/: .env.docker  Dockerfile  pyproject.toml
services/reporting/alembic/: env.py  script.py.mako
services/reporting/alembic/versions/: 0001_create_audit_log.py
services/reporting/src/reporting/: config.py  consumer.py  database.py  handler.py  main.py  models.py  tracing.py
services/reporting/tests/: test_handler.py
(+78 files in other folders)
